- Define 2 tables to store best price and latest best price - Add scheduler to get best price from binance and houbi then store in database

--- a/trading-service/src/main/resources/application.properties
+++ b/trading-service/src/main/resources/application.properties
@@ -2,3 +2,20 @@ spring.application.name=trading-service
 server.port=8300
 
 eureka.client.register-with-eureka=true
+spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
+spring.datasource.url=jdbc:h2:mem:trading-service
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+
+##API Source
+spring.application.api.binance=https://api.binance.com/api/v3/ticker/bookTicker
+spring.application.api.houbi=https://api.huobi.pro/market/tickers
+spring.application.api.scheduler.intervals=10000
+
+concurrent.properties.corePoolSize=20
+concurrent.properties.max-pool-size=200
+concurrent.properties.queue-capacity=200
