--- a/wallet-service/src/main/resources/application.properties
+++ b/wallet-service/src/main/resources/application.properties
@@ -2,3 +2,11 @@ spring.application.name=wallet-service
 server.port=8200
 
 eureka.client.register-with-eureka=true
+spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
+spring.datasource.url=jdbc:h2:mem:wallet-service
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
