- Optimize import - Refactor code - Add controller advice in user and wallet service - Add User client to check if exist user or not

--- a/wallet-service/src/main/resources/application.properties
+++ b/wallet-service/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=wallet-service
 server.port=8200
 
 eureka.client.register-with-eureka=true
+
 spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.url=jdbc:h2:mem:wallet-service
@@ -10,3 +11,6 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.application.user-service=user-service
+spring.application.user-service.port=8100
