- Create api to allows user to buy base on the latest best aggregated price

--- a/trading-service/src/main/resources/application.properties
+++ b/trading-service/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.application.api.scheduler.intervals=10000
 concurrent.properties.corePoolSize=20
 concurrent.properties.max-pool-size=200
 concurrent.properties.queue-capacity=200
+
+spring.application.wallet-service=wallet-service
